Enhanced shopping cart with observer pattern, factory pattern, and Redis support
- Removed duplicate Cart.cs from root directory
- Added observer pattern for logging and performance monitoring
  * ICartObserver interface for cart operation monitoring
  * CartLoggingObserver for detailed operation logging
  * CartPerformanceObserver for metrics collection and slow operation detection
- Implemented factory pattern for cart creation
  * ICartFactory interface and CartFactory implementation
  * Support for multiple backend types (InMemory, Redis)
  * Multi-user cart creation with fallback strategies
- Added Redis-based implementations
  * RedisCart for storing cart data in Redis cache
  * RedisProductService for Redis-based product catalog
  * TTL support and persistence across instances
- Enhanced base architecture
  * BaseObservableCart abstract class with observer pattern integration
  * Renamed Cart to InMemoryCart for clarity
  * Updated interfaces to support observer subscription/unsubscription
- Comprehensive testing
  * 59 unit tests covering all new functionality
  * Observer pattern tests with error handling verification
  * Integration tests for multi-backend scenarios
- Enhanced demo application
  * Showcases all new features including Redis connectivity
  * Performance monitoring demonstrations
  * Multi-user cart scenarios
  * Observer pattern with real-time logging
- Added required packages for Redis, logging, and JSON serialization
- Updated project dependencies and build configuration

--- a/ShoppingCart.Core/ShoppingCart.Core.csproj
+++ b/ShoppingCart.Core/ShoppingCart.Core.csproj
@@ -10,4 +10,11 @@
     <RootNamespace>ShoppingCart.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="8.0.0" />
+  </ItemGroup>
+
 </Project> 
