--- a/ShoppingCart.Tests/ShoppingCart.Tests.csproj
+++ b/ShoppingCart.Tests/ShoppingCart.Tests.csproj
@@ -24,6 +24,9 @@
     <!-- Explicit references to fix security vulnerabilities -->
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <!-- Testing and mocking dependencies -->
+    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
